--- a/dbs_pi_nov_20/api.css
+++ b/dbs_pi_nov_20/api.css
@@ -23,11 +23,19 @@ input[type=submit]:hover {
     background-color: #45a049;
 }
 
-button{
-    width: 50%;
-    background: green;
-}
 
+#index_login_button{
+    width: 100%;
+    text-align: center;
+    background-color: #4CAF50;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+
+}
 
 #functionalities {
     font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
